fixed overflow bug when resizing while scroll is disabled

--- a/scss/components/modal.scss
+++ b/scss/components/modal.scss
@@ -3,11 +3,6 @@
 html .modal {
     cursor: pointer;
     @include noselect;
-
-    &.overlay-light:after,
-    &.overlay-dark:after {
-        transition: background-color $transition-time $transition-timing;
-    }
 }
 
 html {
